# PBRT.jl

./: .gitignore  Dockerfile  LICENSE  Makefile  Manifest.toml  Project.toml  README.md  docker-compose.yml  install-extensions.sh  my_program  mylib.c  opt-tools.sh  out.txt  time.csv  tmp_setup.sh  types.jl  update-ext.sh
.github/workflows/: ci.yml  documentation.yml  testing.yml
Obsidian Vault/: interop research.canvas  polymorphism research.canvas  programming language research.canvas  type theory research.canvas  writing planning.canvas
Obsidian Vault/.obsidian/: workspace.json
Obsidian Vault/notes/binding tool design/: binding generation.md  binding tool implementation.md  phases.md
Obsidian Vault/notes/low level preamble/: memory management.md
Obsidian Vault/old/: initial draft writing.md
asdasd/: CHANGELOG.md  asdasd.cabal  clib.bc  clib.c  clib.h  default_9786961309398754581_0.profraw  hello  libtest.ll  main  main-linked.ll  main.cpp  my_lib.c  my_template.cpp  my_template.h  out  out.ll  out.txt  output.ll  output_clean.ll  pyproject.toml  smth.v  test.cpp  test.go  test.js  test.ll  test.py  test.rs  test.s
asdasd/c_lib/: c_lib.c
asdasd/parser/: parser.cabal
asdasd/parser/app/: Main.hs  Parser.hs
asdasd/parser/dist-newstyle/cache/: compiler  config  elaborated-plan  improved-plan  plan.json  solver-plan  source-hashes  up-to-date
asdasd/parser/dist-newstyle/packagedb/ghc-8.8.4/: package.cache  parser-0.1.0.0-inplace.conf
asdasd/src_rs/: main.rs  test.rs  test2.rs
cpp_src/: CMakeLists.txt  CTestTestfile.cmake  PBRT  PBRT_tests  build-lib.sh  build-proj.sh  bvh.h  install_deps.sh  main.cpp  out.txt  testing.cpp  time.csv
cpp_src/Testing/Temporary/: CTestCostData.txt  LastTest.log.tmp
cpp_src/include/: aabb.h  abs_hit.h  abs_hittable.h  bvh.h  color.h  hittable.h  material.h  math_util.h  sphere.h  triangle.h  user_types.h
cpp_src/lens/: CMakeLists.txt
cpp_src/lens/src/: main.cpp
cpp_src/src/: aabb.cpp  abs_hit.cpp  bvh.cpp  funcs.inl  funcs.inl.in  hittable.cpp  main.cpp  math_util.cpp  sphere.cpp  tmp_save.cpp  triangle.cpp  user_types.cpp
cpp_src/tests/: testex.cpp
cpp_src/tmp/: new_testing.cpp  tmp2.cpp  tmp_save.cpp
data/: submission.csv  submission2.csv
dev/: .documenter-siteinfo.json  index.html  objects.inv  search_index.js
docs/: Project.toml  make.jl
docs/src/: index.md
interface/: hit-aabb.jl  hit-bvh.jl  hit-sphere.jl  hit-triangle.jl
logs/: PBRT.jl.178346.mem  RayTracer.jl.178346.mem  aabb.jl.178346.mem  bvh.jl.178346.mem  camera.jl.178346.mem  hittable.jl.178346.mem  hittable_list.jl.178346.mem  obj_reader.jl.178346.mem  ray.jl.178346.mem  scene.jl.178346.mem  sphere.jl.178346.mem  triangle.jl.178346.mem  util.jl.178346.mem
notebooks/: benchmark.ipynb  cum_diff_d.txt  debugging.ipynb  diff_d.txt  jl_time.csv  lang-testing.ipynb  mem-analysis.ipynb  py_time.csv  pyproject.toml  research.ipynb  speed-analysis.ipynb  time.txt  validator.ipynb
notebooks/data/: cpp_time.csv  gpu_specs_v6.csv  jl_time.csv  out.dot  py_time.csv  time.csv
paper/: Makefile  citations.bib  codestyle.sty  docscitations.bib  frontmatter.sty  references.bib  thesis.aux  thesis.blg  thesis.fdb_latexmk  thesis.fls  thesis.out  thesis.tex  thesis.xdv  vu.sty
paper/_minted-thesis/: 2027E02C768AA62611CEF40712EBA0F946C0D6F32DB1F92FA2C28E2321E018DD.pygtex  2EE56BE744682BB21B7E85926983BA65D5FEA92301D41A4635CC55325DB55160.pygtex  464FFDC56816B1A4FE8C91291CEAC8D030420D357BA31CA16568D1F65EDDB3A4.pygtex  56CD1C46BAAD0BD9C0D99F196C24F3698FBDBCB5E0AFA139CAB6197421B8C3C1.pygtex  578F05A617D85CF0ECDE30643802670FD5FEA92301D41A4635CC55325DB55160.pygtex  63FE796DE010A632A2F2ED78B7D10CC530420D357BA31CA16568D1F65EDDB3A4.pygtex  900DF777E9C854F8A5BBAFE344B3F69530420D357BA31CA16568D1F65EDDB3A4.pygtex  AD6BCDC64EFECF97C16122ADF0CACCDE8FBDBCB5E0AFA139CAB6197421B8C3C1.pygtex  C8A4291C0D93E59603B03E81559BAA4246C0D6F32DB1F92FA2C28E2321E018DD.pygtex  E125EEA7565F60B5B0CCEC142BFCCD9A46C0D6F32DB1F92FA2C28E2321E018DD.pygtex
paper/presentation/: RQs.tex  additional-perf.tex  approach.tex  baseline-performance.tex  benefits.tex  choice-of-apis.tex  codestyle.sty  dynamic-mapping.tex  high-level-interop.tex  impact.tex  introduction.tex  isolated-performance.tex  limitations.tex  motivation.tex  no-reflect-better.tex  no-reflect-better2.tex  no-reflect-better3.tex  no-reflect-trivial.tex  polymorphic-conversions.tex  profiling-and-extraction.tex  results.tex  rewriting.tex  script.md  slide1.dvi  slide1.nav  slide1.tex  slide1.vrb  slide1.xdv  static-mapping.tex  system-design.tex  testing-setup.tex
paper/proposal/: codestyle.sty  main.aux  main.bcf  main.fdb_latexmk  main.fls  main.out  main.run.xml  main.tex  main.xdv  pagestyle.sty
paper/sections/: abstract.tex  background.tex  conclusion.tex  content.txt  declaration.tex  discussion.tex  implementation.tex  intro.tex  related.tex  research_method.tex  study_execution.tex  threats.tex
paper/tex_figures/: main_interface.aux  main_interface.tex
py_src/: basic_normals.py  bvh.py  hittable.py  main.py  ppm-reader.py  pyproject.toml  scene.py  speed-analysis.ipynb  testing.py  time.csv
py_src/modules/: aabb.py  abs_hit.py  bvh.py  color.py  hittable.py  material.py  sphere.py  triangle.py
py_src/utils/: sub_func_parser.py  testing.py
smth/: _CoqProject  main.v  test.v
src/: PBRT.jl  RayTracer.jl  aabb.jl  basic_normals.jl  bvh.jl  diff_d.txt  functions.jl  hittable.jl  hittable_list.jl  interval.jl  juliaThesis.jl  macros.jl  material.jl  obj_reader.jl  ray.jl  scene.jl  sphere.jl  testing.ipynb  testing.jl  triangle.jl  util.jl
test/: runtests.jl
utils/: ppm-reader.py  pyproject.toml
