[tool.poetry]
name = "notebooks"
version = "0.1.0"
description = ""
authors = ["KaiErikNiermann <k.e.niermann@student.vu.nl>"]
readme = "README.md"
package-mode = false


[tool.poetry.dependencies]
python = "3.10.12"
matplotlib = "^3.9.0"
numpy = "^1.26.4"
pandas = "^2.2.2"
ipykernel = "^6.29.4"
jupyter = "^1.0.0"
graphviz = "^0.20.3"
networkx = "^3.3"
pydot = "^2.0.0"
pyvis = "^0.3.2"
flameprof = "^0.4"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
