[tool.poetry]
name = "py_src"
version = "0.1.0"
description = ""
authors = ["KaiErikNiermann <kai.niermann@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
julia = "^0.6.2"
juliacall = "^0.9.19"
cuda-python = "^12.4.0"
numba = "^0.59.1"
numpy = "^1.26.4"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
